# ckool

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  conftest.py  pyproject.toml
docs/: conf.py  index.rst
scripts/: create_package_for_someone_else.py  fix_all_spatial_strings.py  fix_resource_url.sql  functions.sh  local_upload_test.sh
src/ckool/: __init__.py  __main__.py  api.py  base_request.py  config_parser.py  file_management.py  full_upload_flow.py  interface_remote.py  internal2open.py  metadata_tools.py  parallel_runner.py  processor.py  templates.py  upload.py  utilities.py
src/ckool/ckan/: ckan.py  interfaces.py  publishing.py  upload.py
src/ckool/datacite/: datacite.py  doi_generator.py  doi_store.py  metadata_formatter.py  parse_datacite_schema.py  utilities.py  xml.py  xml_writer.py
src/ckool/interfaces/: base_request.py  dora.py  interfaces.py  mixed_requests.py
src/ckool/other/: caching.py  config_parser.py  error_handling.py  file_management.py  hashing.py  logger.py  metadata_tools.py  prompt.py  types.py  utilities.py
src/erol/: base_request.py  interface_remote.py  metadata.py  upload.py
tests/ckool/: setup_ckan.sh  test_api.py  test_base_request.py  test_caching.py  test_file_management.py  test_full_upload_flow.py  test_hash.py  test_metadata.py  test_metadata_tools.py  test_parallel_runner.py  test_remote_interface.py  test_templates.py  test_upload.py  test_utilities.py
tests/ckool/ckan/: test_api_upload.py  test_ckan.py  test_publishing.py  test_upload.py
tests/ckool/data/: orcids.json  package_metadata.json  related_publications.json
tests/ckool/data/inputs/: affiliations.json  ckan_entity_data.py  enriched_package_metadata.json  enriched_package_metadata.xml
tests/ckool/data/outputs/: metadataformatter.json  package_data_from_ckan.json
tests/ckool/datacite/: test_datacite.py  test_doi_generator.py  test_doi_store.py  test_dora.py  test_metadata_formatter.py  test_parse_datacite_schema.py  test_xml.py  test_xml_writer.py
tests/ckool/interfaces/: test_base_request.py  test_dora.py  test_mixed_requests.py  test_secure_interfaces.py
tests/ckool/other/: test_caching.py  test_config_parser.py  test_file_management.py  test_hash.py  test_metadata.py  test_prompt.py  test_utilities.py
tests/erol/: test_base_request.py  test_caching.py  test_file_management.py  test_hash.py  test_metadata.py  test_remote_interface.py  test_upload.py
